# skill-manager

./: .gitignore  LICENSE  README.md  SKILL.md  _project_context.md  cover.html  install_all.ps1  install_all.sh  pyproject.toml  setup.ps1  setup.sh
scripts/: skill_manager.py
