[project]
name = "skill-manager"
version = "2.1.0"
description = "统一管理 AI Agent Skills 的命令行工具 + 智能工作流路由"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "stbabaocha"}
]
keywords = ["ai", "skills", "copilot", "claude", "cline", "agent", "academic"]

[project.urls]
Homepage = "https://github.com/stbabaocha/skill-manager"
Issues = "https://github.com/stbabaocha/skill-manager/issues"
